Fix the world: pins, OLED library

--- a/P02 TTN_MAPPER GPS/platformio.ini
+++ b/P02 TTN_MAPPER GPS/platformio.ini
@@ -16,6 +16,6 @@ monitor_speed = 115200
 ;upload_port = /dev/ttyUSB*
 
 lib_deps = 
-	mikalhart/TinyGPSPlus@^1.0.2
-	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.1
+	mikalhart/TinyGPSPlus@^1.0.3
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@4.6.1
   jgromes/RadioLib @ ^7.1.0
